Cambios a los formularios create

--- a/app/views/app-editarCriterio.html
+++ b/app/views/app-editarCriterio.html
@@ -1,3 +1,11 @@
+<style type="text/css">
+    
+.borde-input
+{
+  border-style: solid;
+}
+.top-buffer { margin-top:20px; }
+    </style>
 <div ng-controller="CtrlListas">
   <ol class="breadcrumb">
     <li class=""><a href="#/">Home</a></li>
