--- a/app/views/app-vistaMarcas.html
+++ b/app/views/app-vistaMarcas.html
@@ -16,9 +16,8 @@
 		<a href=""></a>
 	    <table class="table table-hover">
 	        <thead>
-	            <tr>
-	              	<th>Marca</th> 
-	              	 
+	            <tr class="info">
+	              	<th>Marca</th>  
 	              	<th></th> 
 	            </tr>
 	        </thead>
