--- a/app/views/app-editarClienteEnvio.html
+++ b/app/views/app-editarClienteEnvio.html
@@ -1,3 +1,11 @@
+<style type="text/css">
+    
+.borde-input
+{
+  border-style: solid;
+}
+.top-buffer { margin-top:20px; }
+    </style>s
 <div ng-controller="CtrlEditarDirEnvio">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
