--- a/app/views/app-nuevaLocacion.html
+++ b/app/views/app-nuevaLocacion.html
@@ -1,31 +1,103 @@
-
+<style type="text/css">
+    
+.borde-input
+{
+  border-style: solid;
+}
+.top-buffer { margin-top:20px; }
+    </style>
 <div ng-controller="CtrlLocacionNueva">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
-      <li class="active"><a href="#">Nueva Locacion</a></li>
+      <li class="active"><a href="#">Nueva Locaci&oacute;n</a></li>
   </ol>
   <div class="page-heading">
-    <h1>Nuevo Locacion</h1>
+    <h1>Nueva Locaci&oacute;n</h1>
   </div>
-  <div class="tab-content">
-    <form name="locacionForm" ng-submit="nuevaLoc(clienteN)">
-      <h3> Informaci&oacute;n general</h3>
-      <label for="NombreLoc">Nombre:</label>
-      <input id="NombreLoc" type="text" name="NombreLoc" ng-model="locacion.name" required /><br />
-      <label for="ColoniaLoc">Colonia:</label>
-      <input id="ColoniaLoc" type="text" name="ColoniaLoc" ng-model="locacion.neighborhood" required /><br />
-      <label for="CalleLoc">Calle:</label>
-      <input id="CalleLoc" type="text" name="CalleLoc" ng-model="locacion.street" required /><br />
-      <label for="NumeroLoc">Numero:</label>
-      <input id="NumeroLoc" type="number" name="NumeroLoc" ng-model="locacion.number" required /><br />
-      <label for="EntidadLoc">Entidad:</label>
-      <input id="EntidadLoc" type="text" name="EntidadLoc" ng-model="locacion.municipality" required /><br />
-      <label for="MunicipioLoc">Municipio:</label>
-      <input id="MunicipioLoc" type="text" name="MunicipioLoc" ng-model="locacion.state" required /><br />
-      <label for="CpLoc">CP:</label>
-      <input id="CpLoc" type="number" name="CpLo" ng-model="locacion.zipcode" required /><br />
-      <input type="submit" value="Guardar" class="btn btn-primary">
-      <br />
-    </form>    
-  </div>
+    <div class="container-fluid">
+         <form name="locacionForm" ng-submit="nuevaLoc(clienteN)">
+            <div class="tab-pane">
+                <div class="row top-buffer ">
+                    <div class="col-md-6 borde-input ">
+                        <div class="form-group top-buffer">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="NombreLoc">Nombre:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="NombreLoc" type="text" name="NombreLoc" ng-model="locacion.name" required />
+                                </div>
+                            </div>                            
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="ColoniaLoc">Colonia:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control"  id="ColoniaLoc" type="text" name="ColoniaLoc" ng-model="locacion.neighborhood" required />
+                                </div>
+                            </div>                            
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="CalleLoc">Calle:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="CalleLoc" type="text" name="CalleLoc" ng-model="locacion.street" required />
+                                </div>
+                            </div>                              
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="NumeroLoc">N&uacute;mero:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="NumeroLoc" type="number" name="NumeroLoc" ng-model="locacion.number" required />
+                                </div>
+                            </div>                              
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="EntidadLoc">Entidad:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="EntidadLoc" type="text" name="EntidadLoc" ng-model="locacion.municipality" required />
+                                </div>
+                            </div>                              
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="MunicipioLoc">Municipio:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="MunicipioLoc" type="text" name="MunicipioLoc" ng-model="locacion.state" required />
+                                </div>
+                            </div>                              
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="CpLoc">CP:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="CpLoc" type="number" name="CpLo" ng-model="locacion.zipcode" required />
+                                </div>
+                            </div>                              
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
   </div>
