--- a/app/views/app-nuevoImpuesto.html
+++ b/app/views/app-nuevoImpuesto.html
@@ -1,3 +1,10 @@
+<style type="text/css">
+.borde-input
+{
+  border-style: solid;
+}
+.top-buffer { margin-top:20px; }
+    </style>
 <div ng-controller="CtrlFacturacion">
   <ol class="breadcrumb">
     <li class=""><a href="#/">Home</a></li>
@@ -7,15 +14,39 @@
   <div class="page-heading">
     <h1>Nuevo Impuesto</h1>
   </div>
-  <div class="tab-content">
-      <form name="taxForm2"  ng-submit="subTax(taxN)">
-        <label for="Nombre">Nombre:</label>
-        <input id="Nombre" type="text" name="nombre" ng-model="taxN.name" required /><br />
-        <label for="perc">Porcentaje:</label>
-        <input id="perc" type="text" name="desc" ng-model="taxN.percentage" required /><br />
-        <br />
-        <input type="submit" value="Guardar" class="btn btn-primary">
-      </form>
-      <br />
-  </div>
+    <div class="container-fluid">
+         <form name="nueImpForm"  ng-submit="subTax(taxN)">
+            <div class="tab-pane">
+                <div class="row top-buffer ">
+                    <div class="col-md-6 borde-input">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                   <label for="Nombre">Nombre:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input  class="form-control" id="Nombre" type="text" name="nombre" ng-model="taxN.name" required />
+                                </div>
+                            </div>  
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                   <label for="perc">Porcentaje:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="perc" type="text" name="perc" ng-model="taxN.percentage" required />
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
