--- a/app/views/app-nuevoPrecio.html
+++ b/app/views/app-nuevoPrecio.html
@@ -1,3 +1,10 @@
+<style type="text/css">
+.borde-input
+{
+  border-style: solid;
+}
+.top-buffer { margin-top:20px; }
+    </style>
 <div ng-controller="CtrlFacturacion">
   <ol class="breadcrumb">
     <li class=""><a href="#/">Home</a></li>
@@ -7,16 +14,40 @@
   <div class="page-heading">
     <h1>Nuevo Precio</h1>
   </div>
-  <div class="tab-content">
-      <form name="precioForm2"  ng-submit="subPrecio(precioN)">
-        <label for="NomPre">Nombre:</label>
-        <input id="NomPre" type="text" name="nombre" ng-model="precioN.name" required /><br />
-        <label for="DescPre">Descrpci&oacute;n:</label>
-        <input id="DescPre" type="text" name="desc" ng-model="precioN.description" required /><br />
-        
-        <br />
-        <input type="submit" value="Guardar" class="btn btn-primary">
-      </form>
-      <br />
-  </div>
+    <div class="container-fluid">
+         <form name="nuePreForm"  ng-submit="subPrecio(precioN)">
+            <div class="tab-pane">
+                <div class="row top-buffer ">
+                    <div class="col-md-6 borde-input">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                   <label for="NomPre">Nombre:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="NomPre" type="text" name="nombre" ng-model="precioN.name" required />
+                                </div>
+                            </div>  
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                   <label for="DescPre">Descrpci&oacute;n:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="DescPre" type="text" name="desc" ng-model="precioN.description" required />
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
 </div>
