--- a/app/views/app-vistaClienteInd.html
+++ b/app/views/app-vistaClienteInd.html
@@ -18,7 +18,7 @@
         <div class="col-md-12">
           <table class="table table-hover">
             <thead>
-                <tr>
+                <tr class="info">
                   <th>Nombre</th> 
                   <th>Correo</th> 
                   <th>P&aacute;gina</th> 
