--- a/app/views/app-vistaClientes.html
+++ b/app/views/app-vistaClientes.html
@@ -12,24 +12,30 @@
 	    	</div>
 		</div>
 	</div>
-	<div class="tab-content">
-      <table class="table table-hover">
-          <thead>
-              <tr>
-                <th>Nombre</th> 
-                <th>Correo</th> 
-                <th>P&aacute;gina</th> 
-                <th>Tel&eacute;fono</th> 
-                <th>Precio</th>
-              </tr>
-          </thead>
-          <tr ng-repeat="cliente in clientesTods">
-              <td><a href="#/app-vistaClienteInd/{{ cliente.id }}">{{ cliente.name }}</a></td>
-              <td>{{ cliente.email }}</td>
-              <td>{{ cliente.website }}</td>
-              <td>{{ cliente.phone }}</td>
-              <td>{{ cliente.price.name }}</td>
-          </tr>
-      </table>
-  </div>
+    <div class="tab-content" >
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12 bor-tab">   
+                    <table class="table table-hover">
+                      <thead>
+                          <tr class="info">
+                            <th>Nombre</th> 
+                            <th>Correo</th> 
+                            <th>P&aacute;gina</th> 
+                            <th>Tel&eacute;fono</th> 
+                            <th>Precio</th>
+                          </tr>
+                      </thead>
+                      <tr ng-repeat="cliente in clientesTods">
+                          <td><a href="#/app-vistaClienteInd/{{ cliente.id }}">{{ cliente.name }}</a></td>
+                          <td>{{ cliente.email }}</td>
+                          <td>{{ cliente.website }}</td>
+                          <td>{{ cliente.phone }}</td>
+                          <td>{{ cliente.price.name }}</td>
+                      </tr>
+                  </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>	
