--- a/app/views/app-vistaDivisas.html
+++ b/app/views/app-vistaDivisas.html
@@ -11,21 +11,27 @@
 	    	</div>
 		</div>
 	</div>
-	<div class="tab-content">
-	    <table class="table table-hover">
-	        <thead>
-	            <tr>
-	              	<th>Divisa</th> 
-	              	<th>Nombre</th> 
-	              	<th></th> 
-	            </tr>
-	        </thead>
-	        <tr ng-repeat="divisa in currenciesProxy" >
-	            <td>{{ divisa.shortcut }}</td>
-	            <td>{{ divisa.name }}</td>
-	            <td><a href="#/app-editarDivisa/{{ divisa.id }}">Editar</a></td>
-	            <td><a ng-click="removeTest(divisa.id)" ng-confirm-click="Are you sure?">Eliminar</a></td>
-	        </tr>
-	    </table> 
-	</div>
+    <div class="tab-content" >
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">   
+                    <table class="table table-hover">
+                        <thead>
+                            <tr class="info">
+                                <th>Divisa</th> 
+                                <th>Nombre</th> 
+                                <th></th> 
+                            </tr>
+                        </thead>
+                        <tr ng-repeat="divisa in currenciesProxy" >
+                            <td>{{ divisa.shortcut }}</td>
+                            <td>{{ divisa.name }}</td>
+                            <td><a href="#/app-editarDivisa/{{ divisa.id }}">Editar</a></td>
+                            <td><a ng-click="removeTest(divisa.id)" ng-confirm-click="Are you sure?">Eliminar</a></td>
+                        </tr>
+                    </table> 
+                </div>
+            </div>
+        </div>
+    </div>
 </div>	
