--- a/app/views/app-vistaFacturacion.html
+++ b/app/views/app-vistaFacturacion.html
@@ -23,7 +23,7 @@
             <div class="col-md-11">
                 <table class="table table-hover">
 			        <thead>
-			            <tr>
+			            <tr class="info">
 			              	<th>Nombre</th> 
 			              	<th>Descripci&oacute;n</th> 
 			              	<th>Status</th>
