--- a/app/views/app-vistaListas.html
+++ b/app/views/app-vistaListas.html
@@ -22,7 +22,7 @@
             <div class="col-md-11">
                 <table class="table table-hover">
                     <thead>
-                        <tr>
+                        <tr class="info">
                           <th>Nombre</th>
                           <th>Status</th>
                           <th></th> 
