--- a/app/views/app-vistaMarcasInd.html
+++ b/app/views/app-vistaMarcasInd.html
@@ -12,8 +12,7 @@
 	<div class="tab-content">
     <table class="table table-hover">
         <thead>
-            <tr>
-              	
+            <tr class="info">   	
               	<th>Marca</th> 
               	<th>Editar</th> 
               	<th>Eliminar</th> 
