--- a/app/views/app-vistaPrestamos.html
+++ b/app/views/app-vistaPrestamos.html
@@ -1,7 +1,7 @@
 <style type="text/css">
 .bor-tab{border-style: solid;
     border-width: 1px;}
-/style>
+</style>
 <div ng-controller="CtrlPrestamos">
     <ol class="breadcrumb">
         <li class=""><a href="#/">Home</a></li>
@@ -19,7 +19,7 @@
     <div class="tab-content" >
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 bor-tab">   
+                <div class="col-md-12">   
                     <table class="table table-hover">
                         <thead>
                             <tr class="info">
