--- a/app/views/app-vistaProductos.html
+++ b/app/views/app-vistaProductos.html
@@ -1,7 +1,4 @@
-<style type="text/css">
-.bor-tab{border-style: solid;
-    border-width: 1px;}
-</style>
+
 <div ng-controller="EditCtrlProductos">
     <ol class="breadcrumb">
         <li class=""><a href="#">Home</a></li>
@@ -18,7 +15,7 @@
     <div class="tab-content" >
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 bor-tab">   
+                <div class="col-md-12 ">   
                     <table class="table table-hover">
                         <thead>
                             <tr class="info">
