--- a/app/views/app-vistaTransferencias.html
+++ b/app/views/app-vistaTransferencias.html
@@ -19,7 +19,7 @@
     <div class="tab-content" >
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 bor-tab">   
+                <div class="col-md-12 ">   
                     <table class="table table-hover">
                         <thead>
                             <tr class="info">
