Se pone boton de cancelar en todos los formularios

--- a/app/views/app-nuevoAlmacen.html
+++ b/app/views/app-nuevoAlmacen.html
@@ -9,10 +9,10 @@
 <div ng-controller="CtrlAlmacenNuevo">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
-      <li class="active"><a href="#">Nueva Locacion</a></li>
+      <li class="active"><a href="#">Nuevo Almacen</a></li>
   </ol>
   <div class="page-heading">
-    <h1>Nuevo Locacion</h1>
+    <h1>Nuevo Almacen</h1>
   </div>
     <div class="container-fluid">
          <form name="AlmacenForm" ng-submit="nuevoAlmacen()">
@@ -34,6 +34,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                        <a href="#/" style="padding: 7px 15px;" class="pull-right">Cancelar</a>
                     </div>
                 </div>
             </div>
