--- a/app/views/app-nuevoDivisor.html
+++ b/app/views/app-nuevoDivisor.html
@@ -35,6 +35,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                        <a href="#/app-vistaAlmacen/{{almacenOr.id}}" style="padding: 7px 15px;" class="pull-right">Cancelar</a>
                     </div>
                 </div>
             </div>
