--- a/app/views/app-editarPrecio.html
+++ b/app/views/app-editarPrecio.html
@@ -45,6 +45,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                        <a style="padding: 7px 15px;" class="pull-right" href="#/app-vistaFacturacion">Cancelar</a>
                     </div>
                 </div>
             </div>
