--- a/app/views/app-editarProducto.html
+++ b/app/views/app-editarProducto.html
@@ -54,7 +54,8 @@
         </div>
         <div class="row">
           <div class="col-sm-6">
-            <input type="submit" value="Guardar Cambios">
+            <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+              <a href="#/app-vistaProductoInd/{{producto.id}}" style="padding: 7px 15px;" class="pull-right">Cancelar</a>
           </div>
         </div>
       </div>
