--- a/app/views/app-editarVariante.html
+++ b/app/views/app-editarVariante.html
@@ -99,7 +99,7 @@
       
       
       <button  type="submit" class="btn inline">
-        submit
+        Guardar
       </button>
     </form> 
     <hr>   
